# OSINT-NEXUS

./: README.md  build.spec  pyproject.toml  requirements.txt  settings.json
installers/: installer_linux.sh  installer_win.ps1
src/: __init__.py  config.py  database.py  machines.py  main.py  osint_core.py
src/ai/: __init__.py  ai_engine.py
src/analytics/: __init__.py  graph_analytics.py
src/modules/: __init__.py  base_module.py  breach_check.py  breach_intel.py  doc_metadata.py  domain_infra.py  email_harvester.py  github_recon.py  google_search.py  harvester_recon.py  image_forensics.py  instagram_interactions.py  ip_recon.py  phone_recon.py  social_lookup.py  steam_recon.py  transforms.py
src/reports/: __init__.py  report_generator.py
src/resources/: sherlock_data.json
src/ui/: __init__.py  graph_layouts.py  graph_view_tab.py  main_window.py  settings_dialog.py  styles.py  target_scan_tab.py
