[project]
name = "osint-nexus"
version = "1.0.0"
description = "Cross-platform OSINT gathering and visualization application"
authors = [{name = "OSINT-Nexus Team"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["osint", "reconnaissance", "security", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "PyQt6>=6.4.0",
    "pyqtgraph>=0.13.0",
    "networkx>=3.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "phonenumbers>=8.13.0",
    "python-whois>=0.8.0",
    "dnspython>=2.3.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "shodan>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
]

[project.scripts]
osint-nexus = "src.main:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
